don't work spring security

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>Страница для Админа</h1>
-
+<a href="/main">Back</a>
+<a href="/logout" role="button">Exit</a>
 </body>
 </html>
