--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 <h1>Страница для пользователя</h1>
+<a href="/">Back</a>
+<a href="/logout" role="button">Exit</a>
 </body>
 </html>
