--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-      >
+<!--Разработка системы управления бюджетом на предприятии.-->
+
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
@@ -10,12 +10,10 @@
 </head>
 <body>
 
-
 <a href="/user">User Page</a>
-<a href="/admin">Admin Page</a>
-
-<div align="right"  sec=:authorize="hasRole('ROLE_ADMIN)">
-    <p>Only for user with ROLE_ADMIN</p> </div>
-
+<div align="right" sec:authorize="hasRole('ROLE_ADMIN')"><a href="/admin">Admin Page</a></div>
+<p align="right"><a href="/login">Вход</a></p>
+<div align="right" sec:authorize="hasRole('ROLE_ADMIN')"><a href="/users/allUsers">Все пользователи</a></div>
+<div align="right" sec:authorize="hasRole('ROLE_USER')">Text</div>
 </body>
 </html>
